# arkilloid

./: .gitignore  .gitmodules  AUTHORS  Ball.cpp  Ball.h  Bonus.cpp  Bonus.h  Bonus_Die.cpp  Bonus_Die.h  Bonus_speed.h  Bonus_speedDown.cpp  Brick.cpp  Brick.h  BrickBeton.cpp  BrickBeton.h  BrickControl.cpp  BrickControl.h  BrickStrong.cpp  BrickStrong.h  Button.cpp  Button.h  CMakeLists.txt  ChangeLog  Constants.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Help.cpp  Help.h  INSTALL  Intro.cpp  Intro.h  Level.h  Level_1.cpp  Level_1.h  NEWS  README.md  SDLUtils.cpp  SDLUtils.h  (+8 more)
data/: CMakeLists.txt  Makefile.am
data/images/: CMakeLists.txt  Makefile.am
data/images/av-theme-v3/: CMakeLists.txt  Makefile.am
data/images/av-theme-v3/bricks/: CMakeLists.txt
data/images/av-theme-v3/buttons/: CMakeLists.txt
data/images/bricks/: CMakeLists.txt
data/images/buttons/: CMakeLists.txt
data/maps/: CMakeLists.txt  level_1.map  level_2.map  level_3.map
data/sounds/: Makefile.am
data/sounds/music/: CMakeLists.txt  Makefile.am
data/sounds/sfx/: CMakeLists.txt  Makefile.am
src/: Ball.cpp  Ball.h  Bita.cpp  Bita.h  Bonus.cpp  Bonus.h  Bonus_Die.cpp  Bonus_Die.h  Bonus_Life.cpp  Bonus_Life.h  Bonus_speed.cpp  Bonus_speed.h  Bonus_speedDown.cpp  Bonus_speedDown.h  Brick.cpp  Brick.h  BrickBeton.cpp  BrickBeton.h  BrickControl.cpp  BrickControl.h  BrickPortal.cpp  BrickPortal.h  BrickStrong.cpp  BrickStrong.h  Button.cpp  Button.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  Constants.h  Engine.cpp  Engine.h  EngineState.cpp  EngineState.h  EngineStateManager.cpp  EngineStateManager.h  EngineState_Intro.cpp  EngineState_Intro.h  EngineState_MainMenu.cpp  EngineState_MainMenu.h  (+40 more)
src/io/: CMakeLists.txt  file.cpp  file.h  file.hpp  io.cpp  io.hpp  report.cpp  report.hpp
src/sound/: CMakeLists.txt  sfx.cpp  sfx.hpp  snd_decode_vorbis.cpp  snd_decode_vorbis.h  snd_decode_vorbis.hpp  snd_load.cpp  snd_load.h  sound.cpp  sound.hpp
src/sound/sdl/: audio.cpp  audio.hpp  music.cpp  music.hpp  sfx.cpp  sfx.hpp
