set(DATA_FONTS_SUFFIX fonts)
set(DATA_IMAGES_SUFFIX images)
set(DATA_MAPS_SUFFIX maps)
set(DATA_MUSIC_SUFFIX sounds/music)
set(DATA_SOUNDFX_SUFFIX sounds/sfx)
set(DATA_FONTS_DIR ${DATADIR}/${DATA_FONTS_SUFFIX})
set(DATA_IMAGES_DIR ${DATADIR}/${DATA_IMAGES_SUFFIX})
set(DATA_MAPS_DIR ${DATADIR}/${DATA_MAPS_SUFFIX})
set(DATA_MUSIC_DIR ${DATADIR}/${DATA_MUSIC_SUFFIX})
set(DATA_SOUNDFX_DIR ${DATADIR}/${DATA_SOUNDFX_SUFFIX})

add_subdirectory(${DATA_FONTS_SUFFIX})
add_subdirectory(${DATA_IMAGES_SUFFIX}/av-theme-v3)
add_subdirectory(${DATA_MUSIC_SUFFIX})
add_subdirectory(${DATA_SOUNDFX_SUFFIX})
