bin_PROGRAMS = arkilloid

noinst_HEADERS = \
	Ball.h \
	Bita.h \
	BonusControler.h \
	Bonus_Die.h \
	Bonus.h \
	Bonus_Life.h \
	Bonus_speedDown.h \
	Bonus_speed.h \
	BrickBeton.h \
	BrickControl.h \
	Brick.h \
	BrickStrong.h \
	Button.h \
	Checkbox.h \
	Constants.h \
	file.h \
	Game.h \
	GameState.h \
	Globals.h \
	Help.h \
	Intro.h \
	Level_1.h \
	Level.h \
	Particles.h \
	SDLUtils.h \
	Texture.h \
	Timer.h \
	Title.h \
	Window.h \
	../extern/GLFT_Font/GLFT_Font.h

arkilloid_SOURCES = \
	main.cpp \
	Ball.cpp \
	Bita.cpp \
	BonusControler.cpp \
	Bonus.cpp \
	Bonus_Die.cpp \
	Bonus_Life.cpp \
	Bonus_speed.cpp \
	Bonus_speedDown.cpp \
	BrickBeton.cpp \
	BrickControl.cpp \
	Brick.cpp \
	BrickStrong.cpp \
	Button.cpp \
	Checkbox.cpp \
	file.cpp \
	Game.cpp \
	GameState.cpp \
	Globals.cpp \
	Help.cpp \
	Intro.cpp \
	Level_1.cpp \
	Level.cpp \
	Particles.cpp \
	SDLUtils.cpp \
	Texture.cpp \
	Timer.cpp \
	Title.cpp \
	Window.cpp \
	../extern/GLFT_Font/GLFT_Font.cpp
