set(
	DATA_IMAGES_FILES
	ball.png
	bg_Help.bmp
	bg_intro.png
	bg.png
	bg_title.png
	bita.bmp
	bonus_add.png
	bonus_die.png
	bonus_life.png
	bonus_speed_down.png
	bonus_speed_up.png
	brick.png
	heart.png
	menu_button.png
	minus_button.png
	on_off_button.png
	particle.png
	plus_button.png
	StrongBrick.png
)
install(FILES ${DATA_IMAGES_FILES} DESTINATION ${DATA_IMAGES_DIR})
add_subdirectory(bricks)
add_subdirectory(buttons)
