imagedir=${pkgdatadir}/images
dist_image_DATA = \
	ball.png \
	BetonBrick_n.png \
	BetonBrick.png \
	bg_Help.bmp \
	bg_intro.png \
	bg.png \
	bg_title.png \
	bita.bmp \
	bonus_add.png \
	bonus_die.png \
	bonus_life.png \
	bonus_speed_down.png \
	bonus_speed_up.png \
	brick_beton.png \
	brick.png \
	buttonExit.bmp \
	buttonHelp.bmp \
	buttonOPTIONS.png \
	buttonResume.png \
	buttonStart.bmp \
	buttonStart.png \
	heart.png \
	intro_bg.bmp \
	menu_button.png \
	minus_button.png \
	on_off_button.png \
	particle.png \
	plus_button.png \
	StrongBrick.png

EXTRA_DIST = ${dist_image_DATA}
